# hs_algorithmen

./: .gitignore  CMakeLists.txt  _MAIN.h  main.cpp
E_I/: Collatz.cpp  Collatz.h  E_I.txt
E_II/: E_II.cpp  E_II.h  E_II.txt  TowersOfHanoi.cpp  TowersOfHanoi.h  towers_of_hanoi.txt
E_III/: E_III.cpp  E_III.h
E_IV/: E_IV.cpp  E_IV.h  Vector.cpp  Vector.h
E_V/: E_V.cpp  E_V.h  E_V.txt
E_VI/: Calculator.cpp  Calculator.h  E_VI.txt  Stack.cpp  Stack.h  z_info_Calculator_step_by_step.txt
